# claro

./: .gitignore  CLAUDE.md  LESSONS.md  PLAN.md  README.md  dataset_audit.py  distill.py  eval_harness.py  generate.py  inference.py  iterate.py  mlx_data.py  prompts.py  pyproject.toml  rewards.py  samples.jsonl  sources.py  train.py  verifier.py
claro/: prompts.py  prompts.yaml  resources.py  verifier.py
claro/data/: audit.py  distill.py  mlx_format.py
claro/inference/: engine.py  eval_harness.py  generate.py  iterate.py
claro/reward/: __init__.py  c1_level_band.py  c2_vocab.py  c3_fidelity.py  c4_gates.py  compose.py
claro/training/: rewards.py  runner.py
config/: band.json  reward.yaml
docs/: NEXT.md  PLAN_4B.md  STRATEGY_BRIEF.md  V10_FINDINGS.md  V11_1_GATE_FINDING.md  V11_FINDINGS.md  V11_PREFLIGHT.md  V6_SPEC.md  sft_vs_gspo_samples.md
experiments/rewards/: rewards_legacy.py  rewards_v10.py  rewards_v6.py  rewards_v7.py
experiments/scripts/: check_v7.py  check_v7_stability.py  iterate_prompt.py  make_blind_audit.py  probe_v10.py  score_blind_audit.py  validate_reward.py  validate_v6.py
experiments/tests/: test_rewards_legacy.py
experiments/train/: train_dpo_mlx.sh  train_grpo_mlx.sh  train_grpo_v10.sh
langsimp/: prompts.py  verifier.py
langsimp/data/: distill.py
langsimp/inference/: engine.py  eval_harness.py  generate.py  iterate.py
langsimp/training/: registry.py  rewards.py  rewards_v6.py  rewards_v7.py  runner.py
prompts/: fidelity_judge.txt
reward/: __init__.py  c2_vocab.py  compose.py  fidelity.py  gates.py  level_band.py  nlp.py
scripts/: build_vocab_list.py  calibrate_band.py  check_v7.py  check_v7_stability.py  eval_composite.py  eval_difficulty_paired.py  iterate_prompt.py  patch_mlx_lm_lora.sh  rescore_judge_swap.py  select_checkpoint.py  train_dpo_mlx.sh  train_grpo_mlx.sh  train_gspo.sh  train_mlx.sh  train_sft.sh  validate_v6.py
tests/: test_dataset_audit.py  test_datasets.py  test_distill.py  test_distill_strategies.py  test_eval.py  test_generate.py  test_prompts.py  test_resources.py  test_reward.py  test_rewards.py  test_sources.py  test_train.py  test_verifier.py
tests/data/: test_audit.py  test_distill.py  test_distill_strategies.py  test_mlx_format.py  test_sources.py
tests/inference/: test_eval_harness.py  test_generate.py
tests/training/: test_rewards.py  test_runner.py
