[project]
name = "claro"
version = "0.1.0"
description = "Claro — fine-tune a small Gemma model to rewrite English at CEFR A2 level."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.33.1",
    "openai>=1.55.0",
    "python-dotenv>=1.0.1",
    "mlx>=0.31.2",
    "mlx-lm>=0.31.3",
    "datasets>=4.3.0",
    "mlx-lm-lora>=2.1.0",
    "wandb>=0.18",
    "wordfreq>=3.1",
    "pyyaml>=6.0",
    "spacy>=3.8.14",
    "textstat>=0.7.13",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests", "experiments/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes, I = isort, UP = pyupgrade,
# B = bugbear (real-bug heuristics), SIM = simplify.
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
# E501 (line-too-long) handled by formatter; UP007 (Optional → X | None)
# is noisy in code that already uses `Optional` consistently with `from
# __future__ import annotations`.
ignore = ["E501", "UP007"]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use bare asserts, throwaway lambdas as fixtures,
# fixtures named like B-rule violations, and one-off names — relax
# bugbear / simplify / no-lambda-assign there.
"tests/**/*.py" = ["B", "SIM", "E731"]
